# hackathon-2-ai-chatbot

./: .gitignore  HELM_COMMANDS.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  test_auth.py  test_chat.py  test_chat_request.json  test_frontend_integration.py  test_mvp.py
backend/: .env.example  Dockerfile  main.py  pyproject.toml  test_app.py  test_phase6.py  test_user_stories.py
backend/migrations/: 001_initial_schema.sql  add_hashed_password.sql  add_task_enhancements.sql  run.py
backend/src/agent/: agent.py
backend/src/api/: auth.py  chat.py  health.py  tasks.py
backend/src/auth/: __init__.py  dependencies.py
backend/src/db/: init.py  session.py
backend/src/mcp/: server.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: chat_service.py  jwt_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_add_task.py  test_agent_intent_recognition.py  test_complete_task.py  test_conversation_create.py  test_conversation_retrieve.py  test_delete_task.py  test_list_tasks.py  test_mcp_server.py  test_update_task.py
backend/tests/integration/: test_agent_error_handling.py  test_agent_tool_invocation.py  test_agent_tool_selection.py  test_chat_endpoint.py  test_concurrent_users.py  test_conversation_continuity.py  test_conversation_isolation.py  test_cross_user_access_attempts.py  test_fastapi_app.py  test_health_endpoint.py  test_migrations.py  test_multi_user_isolation.py  test_natural_language_variations.py  test_task_operations.py
frontend/: .env.example  README.md  (+5 more)
(+90 files in other folders)
